# backend-agl-app-store

./: .coveragerc  .dockerignore  .env.example  .gitignore  Caddyfile.template  Dockerfile  README.md  agl-publish.sh  alembic.ini  app.py  backup.sh  benchmark.py  benchmark_results.json  build_proto.sh  database.py  deploy.sh  docker-compose.yml  envoy.Dockerfile  envoy.docker.yaml  envoy.yaml  fix_metadata.py  flatpak_scanner.py  generate_proto.sh  main.py  models.py  populate_appstream.py  push-to-agl.sh  pyproject.toml  repo_watch_state.json  repo_watcher.py  requirements.txt  rest_api.py  rest_api.py.bak2  restore.sh  scan_queue.py  seed_apps.py  seed_real_apps.py  service.py  setup.sh  telegram_notifier.py  (+1 more)
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_developer_workflow.py  003_gpg_app_expiry.py  004_trusted_publishers.py  005_email_auth.py  006_scan_columns.py  007_scan_blocked.py  008_tags.py
app/: __init__.py
app/core/: auth_middleware.py  config.py  roles.py
app/grpc/: __init__.py  grpc_server.py
app/http/: __init__.py  http_server.py
app/services/: __init__.py  email_service.py  flathub_client.py  flatmanager_client.py
compose/: postgresql.yml
docker/backend/: entrypoint.sh
docker/flat-manager/: Dockerfile  config.json.template  (+2 more)
protos/: pens-agl-store.proto
scripts/: generate_token.sh
tests/: conftest.py  test_auth_middleware.py  test_config.py  test_database.py  test_flathub_client.py  test_flatmanager_client.py  test_grpc_service.py  test_http_apps.py  test_http_auth.py  test_http_stats.py  test_models.py  test_roles.py
(+14 files in other folders)
